Added google analytics.

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,9 @@ minima:
     # - username: jekyll2
     #   instance: example.com
 
+# Google analytics
+google_analytics: UA-175175063-1
+
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
